--- a/main.html
+++ b/main.html
@@ -4,9 +4,24 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
+	<div class="box">
+		<div style="width:400px; height:100px; text-align:center;">
+			<h1 style="color:#3b99e0;">Shopping cart</h1>
+			<p>The customer is very important, the customer will be followed by the customer.</p>
+		</div>
+		
+		<div class="product">
+			<div>
+				
+			</div>
+		</div>
+		<div class="summary">
+		</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
