--- a/main.html
+++ b/main.html
@@ -8,14 +8,13 @@
 </head>
 
 <body>
-	<div class="box">
-		<div style="width:400px; height:100px; text-align:center;">
+	<div style="width:400px; height:100px; text-align:center;">
 			<h1 style="color:#3b99e0;">Shopping cart</h1>
 			<p>The customer is very important, the customer will be followed by the customer.</p>
 		</div>
-		
-		<div class="product">
-			<div>
+	<div class="box">
+		<div class="container row col-lg-8 col-lg-4">
+			<div class="product">
 				
 			</div>
 		</div>
