--- a/main.html
+++ b/main.html
@@ -9,14 +9,41 @@
 
 <body>
 	<div style="width:400px; height:100px; text-align:center;">
-			<h1 style="color:#3b99e0;">Shopping cart</h1>
+			<h2 style="color:#3b99e0;">Shopping cart</h2>
 			<p>The customer is very important, the customer will be followed by the customer.</p>
 		</div>
 	<div class="box">
 		<div class="container row col-lg-8 col-lg-4">
 			<div class="product">
-				
+				<img src="">
+				<div>
+					<h5 class="block-heading"> I am very Sorry</h5>
+					<p>Display: 5 Inches</p>
+					<p>RAM: 4GB</p>
+					<p>Memory: 32GB</p>
+				</div>
 			</div>
+
+			<div class="product">
+				<img src="">
+				<div>
+					<h5 class="block-heading"> I am very Sorry</h5>
+					<p>Display: 5 Inches</p>
+					<p>RAM: 4GB</p>
+					<p>Memory: 32GB</p>
+				</div>
+			</div>
+
+			<div class="product">
+				<img src="">
+				<div>
+					<h5 class="block-heading"> I am very Sorry</h5>
+					<p>Display: 5 Inches</p>
+					<p>RAM: 4GB</p>
+					<p>Memory: 32GB</p>
+				</div>
+			</div>
+			
 		</div>
 		<div class="summary">
 		</div>
