--- a/main.html
+++ b/main.html
@@ -15,35 +15,14 @@
 	<div class="box">
 		<div class="container row col-lg-8 col-lg-4">
 			<div class="product">
-				<img src="">
+				<img src="" class="img-fluid">
 				<div>
-					<h5 class="block-heading"> I am very Sorry</h5>
+					<a class="block-heading"> I am very Sorry</a>
 					<p>Display: 5 Inches</p>
 					<p>RAM: 4GB</p>
 					<p>Memory: 32GB</p>
 				</div>
 			</div>
-
-			<div class="product">
-				<img src="">
-				<div>
-					<h5 class="block-heading"> I am very Sorry</h5>
-					<p>Display: 5 Inches</p>
-					<p>RAM: 4GB</p>
-					<p>Memory: 32GB</p>
-				</div>
-			</div>
-
-			<div class="product">
-				<img src="">
-				<div>
-					<h5 class="block-heading"> I am very Sorry</h5>
-					<p>Display: 5 Inches</p>
-					<p>RAM: 4GB</p>
-					<p>Memory: 32GB</p>
-				</div>
-			</div>
-			
 		</div>
 		<div class="summary">
 		</div>
