--- a/main.html
+++ b/main.html
@@ -13,16 +13,22 @@
 			<p>The customer is very important, the customer will be followed by the customer.</p>
 		</div>
 	<div class="box">
-		<div class="container row col-lg-8 col-lg-4">
-			<div class="product">
-				<img src="" class="img-fluid">
-				<div>
-					<a class="block-heading"> I am very Sorry</a>
-					<p>Display: 5 Inches</p>
-					<p>RAM: 4GB</p>
-					<p>Memory: 32GB</p>
+		<div class="product row ">
+				<div class="img-fluid"">
+					<img src="" >
 				</div>
-			</div>
+				<div class="container row col-lg-8 ">
+					<h5 class="block-heading col-lg-8"> I am very Sorry</h5>
+					<p class="col-lg-4">Display: 5 Inches</p>
+					<p class="col-lg-4">RAM: 4GB</p>
+					<p class="col-lg-4">Memory: 32GB</p>
+				</div>
+				<div>
+					<h2>Quantity</h2>
+				</div>
+				<div>
+					<p>$120</p>
+				</div>
 		</div>
 		<div class="summary">
 		</div>
