--- a/main.html
+++ b/main.html
@@ -8,30 +8,22 @@
 </head>
 
 <body>
-	<div style="width:400px; height:100px; text-align:center;">
-			<h2 style="color:#3b99e0;">Shopping cart</h2>
-			<p>The customer is very important, the customer will be followed by the customer.</p>
+	<div class="container">
+		<h1 class="block-heading">shopping Cart</h1>
+		<div class="row">
+			<div class="col-lg-8">
+				<div class="product">
+					<div class="row">
+						<div>
+								<img clas="img-fluid">
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-lg-4">
+			</div>
 		</div>
-	<div class="box">
-		<div class="product row ">
-				<div class="img-fluid"">
-					<img src="" >
-				</div>
-				<div class="container row col-lg-8 ">
-					<h5 class="block-heading col-lg-8"> I am very Sorry</h5>
-					<p class="col-lg-4">Display: 5 Inches</p>
-					<p class="col-lg-4">RAM: 4GB</p>
-					<p class="col-lg-4">Memory: 32GB</p>
-				</div>
-				<div>
-					<h2>Quantity</h2>
-				</div>
-				<div>
-					<p>$120</p>
-				</div>
-		</div>
-		<div class="summary">
-		</div>
+		
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
