--- a/main.html
+++ b/main.html
@@ -15,12 +15,20 @@
 				<div class="product">
 					<div class="row">
 						<div>
-								<img clas="img-fluid">
+							<img clas="img-fluid">
+						</div>
+						<div>
+							<img clas="img-fluid">
+						</div>
+						<div>
+							<img clas="img-fluid">
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="col-lg-4">
+				<div class="summary">
+				</div>	
 			</div>
 		</div>
 		
