--- a/main.html
+++ b/main.html
@@ -15,13 +15,29 @@
 				<div class="product">
 					<div class="row">
 						<div>
-							<img clas="img-fluid">
+							<div>
+								<img class="img-fluid">
+							</div>
+							<div>
+								<h2>I am very sorry</h2>
+								<p>display</p>
+								<p>Ram</p>
+								<p>memory</p>
+							</div>
+							<div>
+								<p>Quantity</p>
+							</div>
+
+							<div>
+								<p>$120</p>
+							</div>
+						
 						</div>
 						<div>
-							<img clas="img-fluid">
+							<img class="img-fluid">
 						</div>
 						<div>
-							<img clas="img-fluid">
+							<img class="img-fluid">
 						</div>
 					</div>
 				</div>
