--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 			<div class="col-lg-8">
 				<div class="product">
 					<div class="row">
-						<div>
+						<div class="col1">
 							<div>
 								<img class="img-fluid">
 							</div>
