--- a/main.html
+++ b/main.html
@@ -9,7 +9,10 @@
 
 <body>
 	<div class="container">
+		<div style="text-align:center;">
 		<h1 class="block-heading">shopping Cart</h1>
+		<p>The customer is very important</p>
+			</div>
 		<div class="row">
 			<div class="col-lg-8">
 				<div class="product">
@@ -19,10 +22,10 @@
 								<img class="img-fluid">
 							</div>
 							<div>
-								<h2>I am very sorry</h2>
-								<p>display</p>
-								<p>Ram</p>
-								<p>memory</p>
+								<a href="#" style="text-decoration:none">I am very sorry</a>
+								<p style="margin:0px;">display</p>
+								<p style="margin:0px;">Ram</p>
+								<p style="margin:0px;">memory</p>
 							</div>
 							<div>
 								<p>Quantity</p>
@@ -33,12 +36,7 @@
 							</div>
 						
 						</div>
-						<div>
-							<img class="img-fluid">
-						</div>
-						<div>
-							<img class="img-fluid">
-						</div>
+						
 					</div>
 				</div>
 			</div>
