--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 
 <body>
 	<div class="container">
-		<div style="text-align:center;">
-		<h1 class="block-heading">shopping Cart</h1>
+		<div class="block-heading"">
+		<h2 style="color:#3b99e0;">shopping Cart</h2>
 		<p>The customer is very important</p>
 			</div>
 		<div class="row">
