--- a/main.html
+++ b/main.html
@@ -22,7 +22,51 @@
 								<img class="img-fluid">
 							</div>
 							<div>
-								<a href="#" style="text-decoration:none">I am very sorry</a>
+								<div>
+									<a href="#" style="text-decoration:none; margin-bottom:200px;">I am very sorry</a>
+								</div>
+								<p style="margin:0px;">display</p>
+								<p style="margin:0px;">Ram</p>
+								<p style="margin:0px;">memory</p>
+							</div>
+							<div>
+								<p>Quantity</p>
+							</div>
+
+							<div>
+								<p>$120</p>
+							</div>
+						
+						</div>
+						<div class="col1">
+							<div>
+								<img class="img-fluid">
+							</div>
+							<div>
+								<div>
+									<a href="#" style="text-decoration:none; margin-bottom:200px;">I am very sorry</a>
+								</div>
+								<p style="margin:0px;">display</p>
+								<p style="margin:0px;">Ram</p>
+								<p style="margin:0px;">memory</p>
+							</div>
+							<div>
+								<p>Quantity</p>
+							</div>
+
+							<div>
+								<p>$120</p>
+							</div>
+						
+						</div>
+						<div class="col1">
+							<div>
+								<img class="img-fluid">
+							</div>
+							<div>
+								<div>
+									<a href="#" style="text-decoration:none; margin-bottom:200px;">I am very sorry</a>
+								</div>
 								<p style="margin:0px;">display</p>
 								<p style="margin:0px;">Ram</p>
 								<p style="margin:0px;">memory</p>
